crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_infantry_weapon_range_table.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 1898
expression: screen
---
  1:Clan Heavy Foot Infantry
                                                            ┌ PLATOON ─────────────────────────────┐
                                                            │Strength 21/21                        │
                                                            │██████████████████████████████████████│
                                                            │Damage ≈ 13  (full 13)                │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            └──────────────────────────────────────┘
                        ┌PLT───────┐                        ┌ SKILLS ──────────────────────────────┐
                        │S 21/21   │                        │ Gunnery 4+   Anti-Mech 5+   BV 68    │
                        │██████████│                        │                                      │
                        │          │                        └──────────────────────────────────────┘
                        │          │                        ┌ MOVE ────────────────────────────────┐
                        │          │                        │ Move 1  Jump 0                       │
                        │          │                        │ stationary   [v]                     │
                        │          │                        │ deployed                             │
                        │          │                        └──────────────────────────────────────┘
                        │          │                        ┌ WEAPONS / AMMO / EQUIP ──────────────┐
                        │          │                        │▶Auto-Rifle      PLT  ×21   11   r0-3 │
                        └──────────┘                        │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │──────────────────────────────────────│
                                                            │ Auto-Rifle                           │
                                                            │ range 0-3  (-2/0/+2/+4)              │
                                                            └──────────────────────────────────────┘
 Spc:fire  u:unfire  c:crit  p:pilot  Tab:panel  ?:help
