crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_input_modal.snap
---
source: crates/app/src/tui/mod.rs
expression: render(&mut app)
---
 Sessions — current: default
▶ ● CL  default  (1)  Atlas  · BV 1897










                    ╔ Input ═══════════════════════════════════════════════════╗
                    ║New session name:                                         ║
                    ║Saturday Game█                                            ║
                    ║Enter = ok    Esc = cancel                                ║
                    ╚══════════════════════════════════════════════════════════╝












 [↑↓] sel  [Enter] load  [n] new  [A] AS  [O] OV  [B] SBF  [F] BF  [C] ACS  [r] rename  [D] del  [Es
