crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_munition_picker.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 1311
expression: render(&mut app)
---
  1:Atlas
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 0 / 30   diss 20                 │
                        │██████████│                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        │I 10/10   │                        │sinks 20× Single                      │
                        │██████████│                        │no penalties                          │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
┌LA────────┐┌LT────────┐╔CT ▸F═════╗┌RT────────┐┌RA────────┐┌ PILOT ───────────────────────────────┐
│A 20/20   ││A 20/20   │║A 20/20   ║│A 20/20   ││A 20/20   ││ Gunnery 4+   Piloting 5+   BV 1897   │
│██████████││███████╔ Load munition ═══════════════════════════════════════════╗                   │
│I 10/10   ││R 6/6  ║LRM 20 Ammo                                               ║───────────────────┘
│██████████││███████║  ● Standard                                              ║───────────────────┐
│          ││I 10/10║▶   Fragmentation                                         ║p 0                │
│          ││███████║    Semi-Guided                                           ║                   │
│          ││       ║    Inferno                                               ║                   │
│          ││       ║[↑↓] select   [Enter] load   [Esc] cancel                 ║───────────────────┘
│          ││       ╚══════════════════════════════════════════════════════════╝QUIP ──────────────┐
│          ││          │║          ║│          ││          ││ Medium Laser    RA  H3    5          │
└──────────┘└──────────┘╚══════════╝└──────────┘└──────────┘│ LRM 20 Ammo      12/12               │
            ┌LL────────┐            ┌RL────────┐            │                                      │
            │A 20/20   │            │A 20/20   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │I 10/10   │            │I 10/10   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │          │            │          │            │                                      │
            │          │            │          │            │                                      │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
