crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_out_of_ammo.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 2162
expression: render(&mut app)
---
  1:Atlas
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 7 / 30   diss 20                 │
                        │██████████│                        │█████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        │I 10/10   │                        │sinks 20× Single                      │
                        │██████████│                        │-1 MP                                 │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
┌LA────────┐┌LT────────┐┌CT────────┐┌RT────────┐┌RA────────┐┌ PILOT ───────────────────────────────┐
│A 20/20   ││A 20/20   ││A 20/20   ││A 20/20   ││A 20/20   ││ Gunnery 4+   Piloting 5+   BV 1897   │
│██████████││██████████││██████████││██████████││██████████││ ░░░░░░   unhurt                      │
│I 10/10   ││R 6/6     ││R 6/6     ││R 6/6     ││I 10/10   │└──────────────────────────────────────┘
│██████████││██████████││██████████││██████████││██████████│┌ MOVE ────────────────────────────────┐
│          ││I 10/10   ││I 10/10   ││I 10/10   ││          ││ Walk 2  Run 3  Jump 0  heat          │
│          ││██████████││██████████││██████████││          ││ stationary   [v]                     │
│          ││          ││          ││          ││          ││ standing                             │
│          ││          ││          ││          ││          │└──────────────────────────────────────┘
│          ││          ││          ││          ││          │┌ WEAPONS / AMMO / EQUIP ──────────────┐
│          ││          ││          ││          ││          ││ Medium Laser    RA  H3    5          │
└──────────┘└──────────┘└──────────┘└──────────┘└──────────┘│▶AC/20           RT  H7    20     ✓   │
            ┌LL────────┐            ┌RL────────┐            │ AC/20 Ammo       1/2                 │
            │A 20/20   │            │A 20/20   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │I 10/10   │            │I 10/10   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │          │            │          │            │──────────────────────────────────────│
            │          │            │          │            │ AC/20   range 3/6/9   ammo RT 1/2    │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 Already fired this turn — u to un-fire | Spc:fire  u:unfire  c:crit  p:pilot  Tab:panel  ?:help
